[package]
name = "queryer-node"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
queryer = { path = "../queryer" }
tokio = { version = "1", features = ["full"] }

[dependencies.neon] # 引入 neon
version = "0.9"
default-features = false
features = ["napi-6"]