[package]
name = "flow-of-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "if-else"

[[example]]
name = "loop"

[[example]]
name = "nest-loop"

[[example]]
name = "return-loop"

[[example]]
name = "while"

[[example]]
name = "for-and-range"

[[example]]
name = "for-and-iterators"

[[example]]
name = "match"

[dependencies]
